@@ -6,6 +6,8 @@ ChangeLog
 
 SVN TRUNK
 
+- Badly named 'Noise' wave-shape oscillators get their band-
+  limited treat option; re-labeled to 'Random'. (EXPERIMENTAL)
 - New user preference option, cf. Help/Use native dialogs.
 - An anti-denormal regression applied to the Phaser fx stage
   (affecting early proto-beta >= 0.4.0).
